#45  Optimized code from constant repeat

--- a/MyEssentialOilRemedies/iphone.storyboard
+++ b/MyEssentialOilRemedies/iphone.storyboard
@@ -2602,6 +2602,6 @@
     <inferredMetricsTieBreakers>
         <segue reference="QYv-jo-sTt"/>
         <segue reference="9Qq-SB-b9d"/>
-        <segue reference="EWW-Fh-Ngj"/>
+        <segue reference="tE5-8K-Pn9"/>
     </inferredMetricsTieBreakers>
 </document>
