--- a/MyEssentialOilRemedies/iphone.storyboard
+++ b/MyEssentialOilRemedies/iphone.storyboard
@@ -1530,6 +1530,9 @@
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Cst-cJ-Rfz">
                                                 <rect key="frame" x="164" y="565" width="51" height="31"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <connections>
+                                                    <action selector="swUpdateBlendStatus:" destination="R9C-XY-0pR" eventType="valueChanged" id="WbQ-hO-XEX"/>
+                                                </connections>
                                             </switch>
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -2607,6 +2610,6 @@
         <segue reference="QYv-jo-sTt"/>
         <segue reference="9Qq-SB-b9d"/>
         <segue reference="RBu-Ci-AeC"/>
-        <segue reference="tE5-8K-Pn9"/>
+        <segue reference="EWW-Fh-Ngj"/>
     </inferredMetricsTieBreakers>
 </document>
