#60 Added Color in remedies

--- a/MyEssentialOilRemedies/iphone.storyboard
+++ b/MyEssentialOilRemedies/iphone.storyboard
@@ -2663,6 +2663,6 @@
         <segue reference="QYv-jo-sTt"/>
         <segue reference="9Qq-SB-b9d"/>
         <segue reference="i3e-cA-Y4r"/>
-        <segue reference="EWW-Fh-Ngj"/>
+        <segue reference="tE5-8K-Pn9"/>
     </inferredMetricsTieBreakers>
 </document>
